--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~3.1.8",
     "express": "~4.18.1",
     "http-errors": "~2.0.0",
+    "mongoose": "^6.4.0",
     "morgan": "~1.10.0",
     "node-sass-middleware": "1.0.1"
   }
