--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "mongoose": "^6.4.0",
     "morgan": "~1.10.0",
     "node-sass-middleware": "1.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
