--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "~4.18.1",
     "http-errors": "~2.0.0",
+    "luxon": "^2.4.0",
     "mongoose": "^6.4.0",
     "morgan": "~1.10.0",
     "node-sass-middleware": "1.0.1",
